--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".SelectCity">
+
+        </activity>
+
     </application>
        <!-- android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"-->
